--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'Jekyll version of the Massively theme by HTML5UP'
 description:        "Jekyll version of the Massively theme by HTML5UP"
 locale:             en_US
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://shirleyzzr1.github.io/Zhuoru_Zhang.github.io/" # the base hostname & protocol for your site
+url: "https://shirleyzzr1.github.io" # the base hostname & protocol for your site
 
 # Comments
 disqus_shortname:   default
