--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Zhuoru Zhang
-bio:                'ZHUORU'S WORLD'
-description:        "ZHUORU'S WORLD"
+bio:                'Jekyll version of the Massively theme by HTML5UP'
+description:        "Jekyll version of the Massively theme by HTML5UP"
 locale:             en_US
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://shirleyzzr1.github.io" # the base hostname & protocol for your site
