--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Zhuoru Zhang
+title:              Zhuoru's Wonderland
 bio:                'Jekyll version of the Massively theme by HTML5UP'
 description:        "Jekyll version of the Massively theme by HTML5UP"
 locale:             en_US
